--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <html>
+    <head>
+      <meta charset="UTF-8">
+        <title>Console Tricks!</title>
+        <link rel="icon" href="https://fav.farm/🔥" />
+    </head>
+    <body>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+        <p id="makeGreen">×BREAK×DOWN×</p>
 
-  <script src = "14things.js"></script>
-</body>
+        <script src = "14things.js"></script>
+    </body>
 </html>
